@@ -1818,13 +1818,13 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 				if (rs.next())
 				{
 					//	{0} - Number of lines
-					Integer lines = new Integer(rs.getInt(1));
+					Integer lines = Integer.valueOf(rs.getInt(1));
 					arguments[0] = lines;
 					//	{1} - Line net
-					Double net = new Double(rs.getDouble(2));
+					Double net = Double.valueOf(rs.getDouble(2));
 					arguments[1] = net;
 					//	{2} - Line net
-					Double total = new Double(rs.getDouble(3));
+					Double total = Double.valueOf(rs.getDouble(3));
 					arguments[2] = total;
 					filled = true;
 				}
@@ -1905,19 +1905,19 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 				if (rs.next())
 				{
 					//	{0} - Number of lines
-					Integer lines = new Integer(rs.getInt(1));
+					Integer lines = Integer.valueOf(rs.getInt(1));
 					arguments[0] = lines;
 					//	{1} - Line toral
-					Double lineTotal = new Double(rs.getDouble(3));
+					Double lineTotal = Double.valueOf(rs.getDouble(3));
 					arguments[1] = lineTotal;
 					//	{2} - Grand total (including tax, etc.)
-					Double grandTotal = new Double(rs.getDouble(4));
+					Double grandTotal = Double.valueOf(rs.getDouble(4));
 					arguments[2] = grandTotal;
 					//	{3} - Currency
 					String currency = rs.getString(2);
 					arguments[3] = currency;
 					//	(4) - Grand total converted to Euro
-					Double grandEuro = new Double(rs.getDouble(5));
+					Double grandEuro = Double.valueOf(rs.getDouble(5));
 					arguments[4] = grandEuro;
 					filled = true;
 				}
@@ -1979,10 +1979,10 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 				if (rs.next())
 				{
 					//	{0} - Number of lines
-					Integer lines = new Integer(rs.getInt(1));
+					Integer lines = Integer.valueOf(rs.getInt(1));
 					arguments[0] = lines;
 					//	{1} - Line total
-					Double total = new Double(rs.getDouble(2));
+					Double total = Double.valueOf(rs.getDouble(2));
 					arguments[1] = total;
 					//	{3} - Currency
 					arguments[2] = " ";
@@ -2234,7 +2234,7 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 			rs = pstmt.executeQuery();
 			while (rs.next())
 			{
-				Integer key = new Integer(rs.getInt(1));
+				Integer key = Integer.valueOf(rs.getInt(1));
 				m_Lock.add(key);
 			}
 		}
@@ -2264,7 +2264,7 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 		if (m_Lock == null || m_Lock.isEmpty())
 			return false;
 		//
-		Integer key = new Integer(m_mTable.getKeyID (m_currentRow));
+		Integer key = Integer.valueOf(m_mTable.getKeyID (m_currentRow));
 		return m_Lock.contains(key);
 	}	//	isLocked
 
@@ -2927,7 +2927,7 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 							if (call == null) {
 								//no match from factory, check java classpath
 								Class<?> cClass = Class.forName(className);
-								call = (Callout)cClass.newInstance();
+								call = (Callout)cClass.getDeclaredConstructor().newInstance();
 							}
 						}
 					}
@@ -3190,9 +3190,9 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 			lineNoCurrentRow = (Integer) m_mTable.getValueAt(from, lineCol);
 			lineNoNextRow = (Integer) m_mTable.getValueAt(to, lineCol);
 		} else if (m_mTable.getValueAt(from, lineCol) instanceof BigDecimal) {
-			lineNoCurrentRow = new Integer(((BigDecimal) m_mTable.getValueAt(from, lineCol))
+			lineNoCurrentRow = Integer.valueOf(((BigDecimal) m_mTable.getValueAt(from, lineCol))
 					.intValue());
-			lineNoNextRow = new Integer(((BigDecimal) m_mTable.getValueAt(to, lineCol))
+			lineNoNextRow = Integer.valueOf(((BigDecimal) m_mTable.getValueAt(to, lineCol))
 					.intValue());
 		} else {
 			log.fine("unknown value format - return");
