@@ -17,6 +17,7 @@
 package org.compiere.model;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.Timestamp;
@@ -51,7 +52,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 	/**
 	 * 
 	 */
-	private static final long serialVersionUID = -6174490999732876285L;
+	private static final long serialVersionUID = -1590896898028805978L;
 
 	/**
 	 * 	Get Invoice Line referencing InOut Line
@@ -101,10 +102,10 @@ public class MInvoiceLine extends X_C_InvoiceLine
 	}
 
 	/**	Static Logger	*/
-	private static CLogger	s_log	= CLogger.getCLogger (MInvoiceLine.class);
+	protected static CLogger	s_log	= CLogger.getCLogger (MInvoiceLine.class);
 
 	/** Tax							*/
-	private MTax 		m_tax = null;
+	protected MTax 		m_tax = null;
 	
 	
 	/**************************************************************************
@@ -159,24 +160,24 @@ public class MInvoiceLine extends X_C_InvoiceLine
 		super(ctx, rs, trxName);
 	}	//	MInvoiceLine
 
-	private int			m_M_PriceList_ID = 0;
-	private Timestamp	m_DateInvoiced = null;
-	private int			m_C_BPartner_ID = 0;
-	private int			m_C_BPartner_Location_ID = 0;
-	private boolean		m_IsSOTrx = true;
-	private boolean		m_priceSet = false;
-	private MProduct	m_product = null;
+	protected int			m_M_PriceList_ID = 0;
+	protected Timestamp	m_DateInvoiced = null;
+	protected int			m_C_BPartner_ID = 0;
+	protected int			m_C_BPartner_Location_ID = 0;
+	protected boolean		m_IsSOTrx = true;
+	protected boolean		m_priceSet = false;
+	protected MProduct	m_product = null;
 	/**	Charge					*/
-	private MCharge 		m_charge = null;
+	protected MCharge 		m_charge = null;
 	
 	/**	Cached Name of the line		*/
-	private String		m_name = null;
+	protected String		m_name = null;
 	/** Cached Precision			*/
-	private Integer		m_precision = null;
+	protected Integer		m_precision = null;
 	/** Product Pricing				*/
-	private IProductPricing	m_productPricing = null;
+	protected IProductPricing	m_productPricing = null;
 	/** Parent						*/
-	private MInvoice	m_parent = null;
+	protected MInvoice	m_parent = null;
 
 	/**
 	 * 	Set Defaults from Order.
@@ -192,7 +193,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 		m_C_BPartner_ID = invoice.getC_BPartner_ID();
 		m_C_BPartner_Location_ID = invoice.getC_BPartner_Location_ID();
 		m_IsSOTrx = invoice.isSOTrx();
-		m_precision = new Integer(invoice.getPrecision());
+		m_precision = Integer.valueOf(invoice.getPrecision());
 	}	//	setOrder
 
 	/**
@@ -343,7 +344,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 	public void setM_AttributeSetInstance_ID (int M_AttributeSetInstance_ID)
 	{
 		if (M_AttributeSetInstance_ID == 0)		//	 0 is valid ID
-			set_Value("M_AttributeSetInstance_ID", new Integer(0));
+			set_Value("M_AttributeSetInstance_ID", Integer.valueOf(0));
 		else
 			super.setM_AttributeSetInstance_ID (M_AttributeSetInstance_ID);
 	}	//	setM_AttributeSetInstance_ID
@@ -387,7 +388,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 			setPriceEntered(getPriceActual());
 		else
 			setPriceEntered(getPriceActual().multiply(getQtyInvoiced()
-				.divide(getQtyEntered(), 6, BigDecimal.ROUND_HALF_UP)));	//	precision
+				.divide(getQtyEntered(), 6, RoundingMode.HALF_UP)));	//	precision
 		//
 		if (getC_UOM_ID() == 0)
 			setC_UOM_ID(m_productPricing.getC_UOM_ID());
@@ -476,7 +477,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 		BigDecimal bd = getPriceActual().multiply(getQtyInvoiced());
 		int precision = getPrecision();
 		if (bd.scale() > precision)
-			bd = bd.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			bd = bd.setScale(precision, RoundingMode.HALF_UP);
 		super.setLineNetAmt (bd);
 	}	//	setLineNetAmt
 	/**
@@ -528,7 +529,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 		if (QtyEntered != null && getC_UOM_ID() != 0)
 		{
 			int precision = MUOM.getPrecision(getCtx(), getC_UOM_ID());
-			QtyEntered = QtyEntered.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			QtyEntered = QtyEntered.setScale(precision, RoundingMode.HALF_UP);
 		}
 		super.setQtyEntered (QtyEntered);
 	}	//	setQtyEntered
@@ -543,7 +544,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 		if (QtyInvoiced != null && product != null)
 		{
 			int precision = product.getUOMPrecision();
-			QtyInvoiced = QtyInvoiced.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			QtyInvoiced = QtyInvoiced.setScale(precision, RoundingMode.HALF_UP);
 		}
 		super.setQtyInvoiced(QtyInvoiced);
 	}	//	setQtyInvoiced
@@ -768,7 +769,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 			log.warning("getPrecision = " + i + " - set to 2");
 			i = 2;
 		}
-		m_precision = new Integer(i);
+		m_precision = Integer.valueOf(i);
 		return m_precision.intValue();
 	}	//	getPrecision
 
@@ -1187,7 +1188,7 @@ public class MInvoiceLine extends X_C_InvoiceLine
 	/**
 	 * 	Allocate Landed Cost - Enforce Rounding
 	 */
-	private void allocateLandedCostRounding()
+	protected void allocateLandedCostRounding()
 	{
 		MLandedCostAllocation[] allocations = MLandedCostAllocation.getOfInvoiceLine(
 			getCtx(), getC_InvoiceLine_ID(), get_TrxName());
