@@ -64,7 +64,7 @@ public class MMeasure extends X_PA_Measure
 	 */
 	public static MMeasure get (Properties ctx, int PA_Measure_ID)
 	{
-		Integer key = new Integer (PA_Measure_ID);
+		Integer key = Integer.valueOf(PA_Measure_ID);
 		MMeasure retValue = (MMeasure)s_cache.get (key);
 		if (retValue != null)
 			return retValue;
@@ -634,7 +634,7 @@ public class MMeasure extends X_PA_Measure
 					try
 					{
 						Class<?> clazz = Class.forName(cmd);
-						custom = (MeasureInterface)clazz.newInstance();
+						custom = (MeasureInterface)clazz.getDeclaredConstructor().newInstance();
 					}
 					catch (Exception e)
 					{
