@@ -436,7 +436,7 @@ public class WAllocation extends Allocation
 		int AD_Column_ID = COLUMN_C_INVOICE_C_CURRENCY_ID;    //  C_Invoice.C_Currency_ID
 		MLookup lookupCur = MLookupFactory.get (Env.getCtx(), form.getWindowNo(), 0, AD_Column_ID, DisplayType.TableDir);
 		currencyPick = new WTableDirEditor("C_Currency_ID", true, false, true, lookupCur);
-		currencyPick.setValue(new Integer(m_C_Currency_ID));
+		currencyPick.setValue(Integer.valueOf(m_C_Currency_ID));
 		currencyPick.addValueChangeListener(this);
 
 		// Organization filter selection
@@ -471,14 +471,14 @@ public class WAllocation extends Allocation
 		AD_Column_ID = 61804;    //  C_AllocationLine.C_Charge_ID
 		MLookup lookupCharge = MLookupFactory.get (Env.getCtx(), form.getWindowNo(), 0, AD_Column_ID, DisplayType.TableDir);
 		chargePick = new WTableDirEditor("C_Charge_ID", false, false, true, lookupCharge);
-		chargePick.setValue(new Integer(m_C_Charge_ID));
+		chargePick.setValue(Integer.valueOf(m_C_Charge_ID));
 		chargePick.addValueChangeListener(this);
 		
 	//  Charge
 			AD_Column_ID = 212213;    //  C_AllocationLine.C_Charge_ID
 			MLookup lookupDocType = MLookupFactory.get (Env.getCtx(), form.getWindowNo(), 0, AD_Column_ID, DisplayType.TableDir);
 			DocTypePick = new WTableDirEditor("C_DocType_ID", false, false, true, lookupDocType);
-			DocTypePick.setValue(new Integer(m_C_DocType_ID));
+			DocTypePick.setValue(Integer.valueOf(m_C_DocType_ID));
 			DocTypePick.addValueChangeListener(this);
 			
 	}   //  dynInit
